--- a/css/styles.css
+++ b/css/styles.css
@@ -51,14 +51,21 @@
   .tile {
     /* TODO: MODULE_CARDS */
     /* 1. Fill in the required properties. */
+    position: relative;
+    overflow: hidden;
   }
+
   .tile img {
     /* TODO: MODULE_CARDS */
     /* 1. Fill in the required properties. */
+    width: 100%;
+    height: 100%;
   }
   .tile img:hover {
     /* TODO: MODULE_CARDS */
     /* 1. Fill in the required properties. */
+    filter:brightness(0.6);
+    transform: scale(1.1);
   }
   
   /* Hint: Notice the position:absolute and z-index properties. */
@@ -68,6 +75,7 @@
     z-index: 1;
     text-transform: uppercase;
     letter-spacing: 2px;
+    bottom: 0;
   }
   
   .hero-image {
