--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
     outline: none;
   }
   a {
-    color: inherit !important;
+    color: inherit;
     text-decoration: none !important;
   }
   footer {
@@ -53,6 +53,7 @@
     /* 1. Fill in the required properties. */
     position: relative;
     overflow: hidden;
+    height: 100%;
   }
 
   .tile img {
@@ -66,6 +67,7 @@
     /* 1. Fill in the required properties. */
     filter:brightness(0.6);
     transform: scale(1.1);
+    transition: 2s all;
   }
   
   /* Hint: Notice the position:absolute and z-index properties. */
@@ -114,14 +116,22 @@
   .adventure-card {
     /* TODO: MODULE_ADVENTURES_GRID */
     /* 1. Fill in the required properties. */
+    border-radius: 8px !important;
+    overflow: hidden;
   }
   .adventure-card img {
     /* TODO: MODULE_ADVENTURES_GRID */
     /* 1. Fill in the required properties. */
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: 1s all;
+
   }
   .adventure-card img:hover {
     /* TODO: MODULE_ADVENTURES_GRID */
     /* 1. Fill in the required properties. */
+    filter: brightness(0.6);
   }
   
   /* ================================== */
@@ -131,16 +141,21 @@
   .adventure-detail-card {
     /* TODO: MODULE_ADVENTURE_DETAILS */
     /* 1. Fill in the required properties. */
-  
   }
   
   .adventure-card-image {
     /* TODO: MODULE_ADVENTURE_DETAILS */
     /* 1. Fill in the required properties. */
+    object-fit: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    transition: 1s all;
   }
   .adventure-card-image:hover {
     /* TODO: MODULE_ADVENTURE_DETAILS */
     /* 1. Fill in the required properties. */
+    filter: brightness(0.7);
   }
   .experience-content ul li {
     margin-left: 16px;
